--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -175,9 +175,6 @@
   <data name="marker_fav_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resource\marker_fav_64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="刪除課程" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\刪除課程.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="匯出" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\匯出.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -207,5 +204,8 @@
   </data>
   <data name="SubjectList" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SubjectList.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="刪除課程" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\刪除課程.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
